--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     // See also https://aka.ms/tsconfig/module
     "outDir": "dist",
     "target": "ES2020",
-    "module": "nodenext",
+    "module": "esnext",
     "rootDir": "src",
     "types": [],
     // For nodejs:
@@ -40,7 +40,7 @@
     "verbatimModuleSyntax": false,
     "isolatedModules": true,
     "noUncheckedSideEffectImports": true,
-    "moduleDetection": "force",
+    "moduleDetection": "node",
     "skipLibCheck": true,
   }
 }
