--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "outDir": "dist",
     "target": "ES2020",
     "module": "esnext",
+    "moduleResolution": "node",
     "rootDir": "src",
     "types": [],
     // For nodejs:
@@ -40,7 +41,7 @@
     "verbatimModuleSyntax": false,
     "isolatedModules": true,
     "noUncheckedSideEffectImports": true,
-    "moduleDetection": "node",
+    "moduleDetection": "force",
     "skipLibCheck": true,
   }
 }
