--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,13 +7,13 @@
 
     // Environment Settings
     // See also https://aka.ms/tsconfig/module
-    "outDir": "dist",
+    "outDir": "./dist",
+    "rootDir": "./src",
     "target": "ES2020",
-  "module": "commonjs",
+    "module": "CommonJS",
     "moduleResolution": "node",
-    "rootDir": "src",
-  // Enable Node.js types
-  "types": ["node"],
+    // Enable Node.js types
+    "types": ["node"],
     // For nodejs:
     // "lib": ["esnext"],
     // "types": ["node"],
