--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "backend-em-express-com-autentica-o-jwt-e-mongodb",
+  "name": "bakc-end-praticas-iot",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
